# Celestial

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
include/: Application.hpp  Globals.h
src/: Application.cpp  Main.cpp
